bk_ida/gccida/g1/subst_stack_regs_pat
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1926:6: error: use of undeclared identifier 'v47'
rtx *v47; // r13 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1927:4: error: expected ';' after expression
rtx regno_note; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1927:5: error: use of undeclared identifier 'regno_note'; did you mean 'reg_note'?
rtx regno_note; // rbp 
    ^~~~~~~~~~
    reg_note
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1889:5: note: 'reg_note' declared here
rtx reg_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1929:6: error: use of undeclared identifier 'v50'
rtx *v50; // r14 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1930:6: error: use of undeclared identifier 'v51'
rtx *v51; // r15 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1933:4: error: expected ';' after expression
rtx v54; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1933:5: error: use of undeclared identifier 'v54'
rtx v54; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1934:4: error: expected ';' after expression
rtx v55; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1934:5: error: use of undeclared identifier 'v55'
rtx v55; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1935:6: error: use of undeclared identifier 'v56'
rtx *v56; // r13 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1936:4: error: expected ';' after expression
rtx v57; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1936:5: error: use of undeclared identifier 'v57'
rtx v57; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1938:4: error: expected ';' after expression
rtx v59; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1938:5: error: use of undeclared identifier 'v59'
rtx v59; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1946:6: error: use of undeclared identifier 'src1_note'; did you mean 'reg_note'?
rtx *src1_note; // [rsp+8h] [rbp-80h] 
     ^~~~~~~~~
     reg_note
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1889:5: note: 'reg_note' declared here
rtx reg_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1946:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx' (aka 'struct rtx_def *'))
rtx *src1_note; // [rsp+8h] [rbp-80h] 
~~~ ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1948:4: error: expected ';' after expression
rtx src2_note; // [rsp+10h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1948:5: error: use of undeclared identifier 'src2_note'; did you mean 'src1_notea'?
rtx src2_note; // [rsp+10h] [rbp-78h] 
    ^~~~~~~~~
    src1_notea
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1947:18: note: 'src1_notea' declared here
 struct rtx_def *src1_notea; // [rsp+8h] [rbp-80h] 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/reg-stack.c:1955:4: error: expected ';' after expression
rtx v76; // [rsp+28h] [rbp-60h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/subst_stack_regs_pat/src/obj/reg-stack.o] Error 1
